--- a/four-card-feature-section-master/index.html
+++ b/four-card-feature-section-master/index.html
@@ -27,7 +27,7 @@
       <div class="box box-1">
         <h3>Supervisor</h3>
         <p>Monitors activity to identify project roadblocks</p>
-        <div id="image">
+        <div class="image">
           <img src="./images/icon-supervisor.svg" alt="Supervisor">
         </div>
       </div>
@@ -36,14 +36,14 @@
       <div class="box box-2">
         <h3>Team Builder</h3>
         <p> Scans our talent network to create the optimal team for your project</p>
-        <div id="image">
+        <div class="image">
           <img src="./images/icon-team-builder.svg" alt="Team Builder">
         </div>
       </div>
       <div class="box box-3">
         <h3>Karma</h3>
         <p>Regularly evaluates our talent to ensure quality</p>
-        <div id="image">
+        <div class="image">
           <img src="./images/icon-karma.svg" alt="Karma">
         </div>
       </div>
@@ -52,7 +52,7 @@
       <div class="box box-4">
         <h3>Calculator</h3>
         <p>Uses data from past projects to provide better delivery estimates</p>
-        <div id="image">
+        <div class="image">
           <img src="./images/icon-calculator.svg" alt="Calculator">
         </div>
       </div>
